--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,4 @@
 NODE_ENV=development
 DEBUG=true
 
-VUE_APP_TITLE=Headroom
-VUE_APP_API=https://multitenancy.forge99.com
-VUE_APP_API_KEY=
+VUE_APP_API=http://localhost:3000
