--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "register-service-worker": "^1.6.2",
+    "v-calendar": "^1.0.0-beta.22",
     "vue": "^2.6.10",
     "vue-clickaway": "^2.2.2",
     "vue-router": "^3.0.3",
